# actix-json-responder

./: .cz.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
tests/: actix_json_response.rs  test_actix_json_response.rs
