[package]
name = "actix-json-responder"
version = "0.2.0"
edition = "2018"
authors = ["Ana Bujan <ana@eisberg-labs.com>"]
readme = "README.md"
repository = "https://github.com/eisberg-labs/actix-json-responder"
description = "A procedural macro to reduce json response boilerplate on actix projects."
keywords = ["actix", "json", "actix-web"]
categories = ["Web programming"]
license = "MIT/Apache-2.0"
include = ["src/", "LICENSE-*", "README.md"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.70"

[dev-dependencies]
actix-web = { version = "4.0.1" }
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
